[package]
name = "lunatic"
version = "0.9.1"
edition = "2018"
authors = ["Bernard Kolobara <bernard@lunatic.solutions>"]
description = "Helper library for building Rust applications that run on lunatic."
license = "Apache-2.0/MIT"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# thiserror = "1.0"
thiserror_core2 = {version = "2.0.0", git="https://github.com/jredrado/thiserror-core2.git", default-features = false}

#thiserror_core2 = {version = "2.0.0", path="../thiserror-core2" , default-features = false}

core2 = { version="0.3.5",git = "https://github.com/jredrado/core2", branch = "main", default-features=false, features=["alloc","nightly"]}

serde = { version = "1.0", default-features = false, features = ["derive","alloc"] }
#serde_json = "^1.0"
#serde-json-core = "0.4.0"

#rmp-serde = "^0.15"
#corepack = { version = "~0.4.0", default-features = false, features = ["alloc"] }
#bincode = {version = "^1.3", default-features = false, features = ["derive","alloc"] }
#bincode = { version = "2.0.0-rc", default-features = false, features = ["serde_no_std", "serde_alloc","derive"] }

bincode2 = { version= "2.0.4", git = "https://github.com/jredrado/bincode2.git", branch="master" }

no-std-net = { version = "0.6.1", git="https://github.com/jredrado/no-std-net.git", default-features=false, branch="master"}

ioslice = {version="0.6.0-alpha.2", git="https://github.com/jredrado/ioslice-rs.git", branch="master", default-features=false, features = ["alloc"]}

#protobuf = "^2.25"
paste = "1.0"
lunatic-macros = { version = "^0.9", path = "./lunatic-macros" }
lunatic-test = { version = "^0.9", path = "./lunatic-test" }

[dev-dependencies]
# WASI branch
# criterion = { git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4", default-features = false  }

[[bench]]
name = "spawning"
harness = false

[workspace]
members = [
  "lunatic-macros",
  "lunatic-test",
]
